--- a/index.html
+++ b/index.html
@@ -85,13 +85,16 @@
 <div class="row">
 
     <div class="content">
-        <h3>start your journey to a better life with our practical courses</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta repellendus incidunt dolorum voluptas saepe, animi perspiciatis praesentium ipsa numquam et possimus dolorem enim similique, quod dicta necessitatibus ducimus officiis nemo!</p>
+        <h3>start your journey to building an empire with our shipping and digital classes</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta repellendus incidunt dolorum voluptas saepe, animi perspiciatis praesentium ipsa numquam et possimus dolorem enim similique, quod dicta necessitatibus ducimus officiis nemo!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta repellendus incidunt dolorum voluptas saepe, animi perspiciatis praesentium ipsa numquam et possimus dolorem enim similique, quod dicta necessitatibus ducimus officiis nemo!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta repellendus incidunt dolorum voluptas saepe, animi perspiciatis praesentium ipsa numquam et possimus dolorem enim similique, quod dicta necessitatibus ducimus officiis nemo!
+        </p>
         <a href="#"><button>learn more</button></a>
     </div>
 
     <div class="image">
-        <img src="images/pic.jpg" alt="">
+        <img src="images/star1.jpg" alt="">
     </div>
 
 </div>
