--- a/index.html
+++ b/index.html
@@ -160,49 +160,59 @@
 
 <div class="card-container">
 
-    <div class="card">
+    <div class="card" id="card1">
         <img src="images/ship2.jpg" alt="">
-        <h3>Shipping Masterclass</h3>
+        <h3>1500/= Shipping Masterclass</h3>
         <ul>
-            <li>Shipping</li>
-            <li>Shipping</li>
-            <li>Shipping</li>
-            <li>Shipping</li>
+            <li><i class="fa fa-check-square"></i>Get Lorem ipsum</li>
+            <li><i class="fa fa-times-circle"></i>Get Lorem ipsum</li>
+            <li><i class="fa fa-times-circle"></i>Mentorship</li>
+            <li><i class="fa fa-times-circle"></i>Get Lorem ipsum</li>
+            <li><i class="fa fa-times-circle"></i>Get Lorem ipsum</li>
+            <!-- To get the icons in the card, I searched 'check' and 'times' in https://fontawesome.com/ -->
         </ul>
     </div>
 
     <div class="card">
         <img src="images/ship2.jpg" alt="">
-        <h3>Shipping Masterclass</h3>
+        <h3>1500/= Shipping Masterclass</h3>
         <ul>
-            <li>Shipping</li>
-            <li>Shipping</li>
-            <li>Shipping</li>
-            <li>Shipping</li>
+            <li><i class="fa fa-check-square"></i>Get Lorem ipsum</li>
+            <li><i class="fa fa-check-square"></i>Get Lorem ipsum</li>
+            <li><i class="fa fa-check-square"></i>Mentorship</li>
+            <li><i class="fa fa-times-circle"></i>Get Lorem ipsum</li>
+            <li><i class="fa fa-times-circle"></i>Get Lorem ipsum</li>
+            <!-- To get the icons in the card, I searched 'check' and 'times' in https://fontawesome.com/ -->
+
         </ul>
     </div>
 
     <div class="card">
         <img src="images/ship2.jpg" alt="">
-        <h3>Shipping Masterclass</h3>
+        <h3>1500/= Shipping Masterclass</h3>
         <ul>
-            <li>Shipping</li>
-            <li>Shipping</li>
-            <li>Shipping</li>
-            <li>Shipping</li>
+            <li><i class="fa fa-check-square"></i>Get Lorem ipsum</li>
+            <li><i class="fa fa-check-square"></i>Get Lorem ipsum</li>
+            <li><i class="fa fa-check-square"></i>Mentorship</li>
+            <li><i class="fa fa-check-square"></i>Get Lorem ipsum</li>
+            <li><i class="fa fa-times-circle"></i>Get Lorem ipsum</li>
+            <!-- To get the icons in the card, I searched 'check' and 'times' in https://fontawesome.com/ -->
+
         </ul>
     </div>
 
     <div class="card">
         <img src="images/ship2.jpg" alt="">
-        <h3>Shipping Masterclass</h3>
+        <h3>1500/= Shipping Masterclass</h3>
         <ul>
-            <li>Shipping</li>
-            <li>Shipping</li>
-            <li>Shipping</li>
-            <li>Shipping</li>
+            <li><i class="fa fa-check-square"></i>Get Lorem ipsum</li>
+            <li><i class="fa fa-check-square"></i>Get Lorem ipsum</li>
+            <li><i class="fa fa-check-square"></i>Mentorship</li>
+            <li><i class="fa fa-check-square"></i>Get Lorem ipsum</li>
+            <li><i class="fa fa-check-square"></i>Get Lorem ipsum</li>
+            <!-- To get the icons in the card, I searched 'check' and 'times' in https://fontawesome.com/ -->
+
         </ul>
-        
     </div>
 
 </div>
