--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="content">
     <h1>Grow & Glow</h1>
     <p>Get trained on how to start your business, import and sell your products on digital space!</p>
-    <a href="#"><button>Book a class!</button></a>
+    <a href="#contact"><button>Book a class!</button></a>
 </div>
 
 <div class="box-container">
