Added the services section

--- a/index.html
+++ b/index.html
@@ -150,13 +150,54 @@
     
     <!-- course section ends -->
 
-
+    <div class="services-section">
+        <div class="inner-width">
+          <h1 class="section-title">Our Services</h1>
+          <div class="border"></div>
+          <div class="services-container">
+  
+            <div class="service-box">
+              <div class="service-icon">
+                <i class="fas fa-paint-brush"></i>
+              </div>
+              <div class="service-title">Online Training</div>
+              <div class="service-desc">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+              </div>
+            </div>
+  
+            <div class="service-box">
+              <div class="service-icon">
+                <i class="fas fa-code"></i>
+              </div>
+              <div class="service-title">Business Mentorship</div>
+              <div class="service-desc">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+              </div>
+            </div>
+  
+            <div class="service-box">
+              <div class="service-icon">
+                <i class="fas fa-brush"></i>
+              </div>
+              <div class="service-title">Organizing Entrepreneurship meet-ups</div>
+              <div class="service-desc">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+              </div>
+            </div>
+  
+          </div>
+        </div>
+      </div>
 <!-- price section starts  -->
 
 <section id="teacher" class="teacher">
 
 <h1 class="heading" id="price">Our prices </h1>
-<h3 class="title" id="pricetitle">With 7 cohorts already trained, we have been tested, refined and recommended to you!</h3>
+<!-- <h3 class="title" id="pricetitle">With 7 cohorts already trained, we have been tested, refined and recommended to you!</h3> -->
 
 <div class="card-container">
 
